core/tests/integration/fail/records/merge_nested_different_vals_default_prio.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
{
  foo.bar | default = false,
  foo.bar | default = true,
}.foo.bar
